Correct some bugs and finish the manual and rapport