@@ -1,20 +1,22 @@
 ## Présentation
 
-Ce projet permet à des clients de discuter entre eux via un serveur.
+Ce projet est basé sur le protocole ChatOS, il permet à des clients de discuter 
+entre eux via un serveur.  
 Il est livré avec 2 Jars executables : un pour le serveur et un pour le client.
+Les deux fichiers jars sont dans le dossier [bin](bin).
 
 ---
 ## Lancement
 
 Pour utiliser correctement le projet il faut premièrement démarrer
 le serveur en précisant son port d'écoute :  
-`java -jar ServerChatOS.jar 7777`  
+`java --enable-preview -jar bin/ServerChatOS.jar port`  
 
 Par la suite, vous pourrez démarrer autant de clients que vous souhaitez
 en indiquant l'adresse du serveur, son port d'écoute ainsi que 
 l'espace de travail (c'est-à-dire là où il enregistrera les fichiers 
 et où les autres pourront lire ses fichiers) :  
-`java -jar ClientChatOS.jar localhost 7777 dossier`
+`java --enable-preview -jar bin/ClientChatOS.jar adresse port dossier`
 
 Vous voilà maintenant avec un client connecté au serveur !
 
@@ -39,7 +41,7 @@ les autres utilisateurs :
     Il est possible de commencer un message par **'@'** ou **'/'** sans qu'il soit interprété comme un message 
     privé ou une connexion privée. Pour cela précéder le symbole d'un **'\\'**.
 
-**Attention :**
+**Attention :**  
     La façon dont je sauvegarde les fichiers (autre que les .txt) via une connexion privée est
     en mode `append` donc si un fichier du même nom existait déjà il ne sera pas écrasé mais juste
     étendu.
@@ -79,9 +81,9 @@ utilisateurs recevront un message indiquant votre déconnexion.
 #### Client
 
 Le client est composé de deux contextes :
-- le contexte principal (`ClientChatOS.MainContext`). Qui permet de gérer les messages
+- le contexte principal ([ClientChatOS](src/fr/uge/net/tcp/nonblocking/client/ClientChatOS.java).MainContext). Qui permet de gérer les messages
   envoyé et reçu.
-- le contexte des connexions privées (`PrivateConnectionContext`). Qui permet
+- le contexte des connexions privées ([PrivateConnectionContext](src/fr/uge/net/tcp/nonblocking/client/PrivateConnectionContext.java)). Qui permet
   de gérer le demandes de ressources lors des connexions privées.
   Il agit comme un serveur et un client HTTP en fonction de ce qui est reçu.
   Lors de la demande d'une ressource, contrairement à une vraie requête HTTP, on envoie 
@@ -93,19 +95,20 @@ La console ne fait que transmettre la ligne entrée au contexte principale si el
 #### Serveur
 
 Le serveur est lui composé de 3 contextes :
-- le contexte de connexion (`ConnectionContext`) qui est utilisé lorsqu'un client se connecte
-  et jusqu'à ce qu'il s'authentifie via un pseudo ou un token valide.
-- le contexte client (`ClientContext`) qui est utilisé par les clients lorsqu'ils se sont authentifié avec un pseudo.
-  Il leur permet d'envoyer les différents types de messages aux autres clients.
-- le contexte de connexion privé (`PrivateConnectionContext`) qui est utilisé par les clients lorsqu'ils se
-  sont authentifiés avec un token. Il ne fait que transmettre les octets lu du client A vers le client B (et vice-versa).
+- le contexte de connexion ([ServerChatOS](src/fr/uge/net/tcp/nonblocking/server/ServerChatOS.java).ConnectionContext) 
+  qui est utilisé lorsqu'un client se connecte et jusqu'à ce qu'il s'authentifie via un pseudo ou un token valide.
+- le contexte client ([ServerChatOS](src/fr/uge/net/tcp/nonblocking/server/ServerChatOS.java).ClientContext) qui est 
+  utilisé par les clients lorsqu'ils se sont authentifié avec un pseudo. Il leur permet d'envoyer les différents types 
+  de messages aux autres clients.
+- le contexte de connexion privé ([ServerChatOS](src/fr/uge/net/tcp/nonblocking/server/ServerChatOS.java).PrivateConnection.PrivateConnectionContext)
+  qui est utilisé par les clients lorsqu'ils se sont authentifiés avec un token. 
+  Il ne fait que transmettre les octets lu du client A vers le client B (et vice-versa).
 
 Le serveur garde en mémoire les clients connecté, les connexions privées en cours, les tokens utilisés et les demandes de connexions privées.
 
-
 ### Les paquets
 
-Les paquets (`Packet`) sont le moyen de communication principal utilisé par ce projet.
+Les paquets ([Packet](src/fr/uge/net/tcp/nonblocking/packet/Packet.java)) sont le moyen de communication principal utilisé par ce projet.
 (principale et non unique puisque les connexions privées ne l'utilisent pas)
 Il existe 6 paquets différents (et 11 si on considère les erreurs comme des paquets et non des sous-paquets).
 Pour plus d'information sur les paquets et leur utilité, se référer à la [RFC](docs/Protocol.txt).
@@ -113,21 +116,18 @@ Pour plus d'information sur les paquets et leur utilité, se référer à la [RF
 ### Les paquets HTTP
 
 Comme précisé au-dessus, il existe aussi des paquets n'étant pas définis dans la [RFC](docs/Protocol.txt).
-Ce sont les paquets HTTP (`HTTPPacket`) échangé par les connexions privées.
+Ce sont les paquets HTTP ([HTTPPacket](src/fr/uge/net/tcp/nonblocking/http/HTTPPacket.java)) échangé par les connexions privées.
  
 ### Reader
 
 Lorsqu'un contexte reçoit des données, elles sont toujours données à un Reader (lecteur).
 Les lecteurs sont des elements important qui permettent de convertir une suite d'octet 
 sans sens en un objet pouvant être utilisé par la suite.
-Il existe 4 lecteurs : (tous implémentant l'interface `Reader`)
-- Un lecteur de chaine de caractère (`StringReader`) qui permet de lire un entier 
-  représentant une longueur puis une chaine de caractères encodée en UTF-8 ayant 
-  la longueur lue précédemment.
-- Un lecteur de paquet (`PacketReader`) qui lit un paquet. Donc un octet et en fonction de la valeur
+Il existe 4 lecteurs : (tous implémentant l'interface [Reader](src/fr/uge/net/tcp/nonblocking/reader/Reader.java))
+- Un lecteur de chaine de caractère ([StringReader](src/fr/uge/net/tcp/nonblocking/reader/StringReader.java)) qui permet de lire un entier
+  représentant la longueur de la chaine de caractère qui le suit encodé en UTF-8.
+- Un lecteur de paquet ([PacketReader](src/fr/uge/net/tcp/nonblocking/packet/PacketReader.java)) qui lit un paquet. Donc un octet et en fonction de la valeur
   de cet octet lit différentes choses. (Pour plus de détail lire l'annexe de la [RFC](docs/Protocol.txt)).
-- Un lecteur de ligne HTTP (`HTTPLineReader`) qui lit des octets jusqu'à lire `\r\n` (qui indique une fin de ligne en HTTP).
-- Un lecteur de paquet HTTP (`HTTPReader`) qui lit un message HTTP pouvant être une requête ou une réponse.
-
-Il y a aussi un lecteur particulié : le lecteur de rejet (`RejectReader`) qui ignore des octets
-jusqu'à lire une récupération d'erreur. (Pour plus de détails lire le [rapport détaillé]())
+- Un lecteur de ligne HTTP ([HTTPLineReader](src/fr/uge/net/tcp/nonblocking/http/HTTPLineReader.java)) qui lit des octets jusqu'à lire `\r\n` (qui indique une fin de ligne en HTTP).
+- Un lecteur de paquet HTTP ([HTTPReader](src/fr/uge/net/tcp/nonblocking/http/HTTPReader.java)) qui lit un message HTTP pouvant être une requête ou une réponse.
+- Un lecteur de rejet ([RejectReader](src/fr/uge/net/tcp/nonblocking/reader/RejectReader.java)) qui contrairement aux autres rejette les octets lu jusqu'à lire une récupération d'erreur.
